My first Commit!

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <p id="Mytext">Beautiful</p>
     </div>
     <main>
-        <h1 class="mheader">Hello, isn't it cool?</h1>
+        <h1 class="mheader">Hi,my name is Nazar</h1>
         </main>
     <script src="index.js"></script>
 </body>
